force-app/main/default/objects/VoiceCall__e/VoiceCall__e.object-meta.xml
<CustomObject>
    <label>VoiceCall</label>
    <pluralLabel>VoiceCalls</pluralLabel>
</CustomObject>