force-app/main/default/objects/VoiceCall__e/fields/Call_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Call_Disposition__c</fullName>
    <label>Call Disposition</label>
    <length>5</length>
    <type>Text</type>
</CustomField>