force-app/main/default/objects/VoiceCall__e/fields/InteractionId__c.field-meta.xml
<CustomField>
    <fullName>InteractionId__c</fullName>
    <label>Interaction Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>