force-app/main/default/objects/VoiceCall__e/fields/Voice_Call__c.field-meta.xml
<CustomField>
    <fullName>Voice_Call__c</fullName>
    <label>Voice Call ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>